--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,30 +9,6 @@ on:
       - v[0-9]+.*
 
 jobs:
-  check-build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-
-      - name: Install X11 and other dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libx11-dev libxcb1-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev pkg-config
-
-      - name: Check if build works
-        run: cargo check --all
-      - name: Try release build
-        run: cargo build --release
-      - name: Ensure binary exists and is executable
-        run: |
-          test -f target/release/clownfish && test -x target/release/clownfish
-          ./target/release/clownfish --version || echo "Binary compiled but could not execute. This might need further investigation."
-
   check-release-type:
     runs-on: ubuntu-latest
     outputs:
@@ -48,7 +24,7 @@ jobs:
           fi
 
   create-release:
-    needs: [check-build, check-release-type]
+    needs: [check-release-type]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -75,10 +51,6 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: aarch64-apple-darwin
-            os: macos-latest
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
           - target: x86_64-apple-darwin
@@ -97,15 +69,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libx11-dev libxcb1-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev pkg-config
-      - name: Install cross-compilation dependencies
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-      - name: Set build environment variables
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
       - name: Build binary
         run: cargo build --release --target ${{ matrix.target }}
       - name: Verify binary was built
